--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=java-sonar-runner-sample
+sonar.projectKey=maven-project
 sonar.projectName=Simple Java project analyzed with the SonarQube Runner
 sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
@@ -11,3 +11,4 @@ sonar.junit.reportPaths=target/surefire-reports
 sonar.java.cobertura.reportPath=target/site/cobertura/coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.sourceEncoding=UTF-8
+sonar.host.url=http://44.204.28.201:9000/
