--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=maven-project
 sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src/main
-sonar.tests=src/test
+sonar.tests=src/main
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
 #Unit Test And Code Coverage
