--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=maven-project
 sonar.projectName=maven-project
 sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src/main
+#sonar.sources=src/main
 sonar.tests=src/main
 sonar.java.binaries=target/classes
 sonar.java.test.binaries=target/test-classes
