--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,11 +5,11 @@ sonar.projectVersion=1.0
 #sonar.sources=src/main
 sonar.tests=src/main
 sonar.java.binaries=target/classes
-sonar.java.test.binaries=target/test-classes
+#sonar.java.test.binaries=target/test-classes
 #Unit Test And Code Coverage
 sonar.junit.reportPaths=target/surefire-reports
 sonar.java.cobertura.reportPath=target/site/cobertura/coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.sourceEncoding=UTF-8
 sonar.host.url=http://44.204.28.201:9000/
-sonar.sources=src/main/java
+
