--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -11,5 +11,5 @@ sonar.junit.reportPaths=target/surefire-reports
 sonar.java.cobertura.reportPath=target/site/cobertura/coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://44.204.28.201:9000/
+#sonar.host.url=http://44.204.28.201:9000/
 
