--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.tests=src/main
 sonar.java.binaries=target/classes
 #sonar.java.test.binaries=target/test-classes
 #Unit Test And Code Coverage
-sonar.junit.reportPaths=target/surefire-reports
+#sonar.junit.reportPaths=target/surefire-reports
 sonar.java.cobertura.reportPath=target/site/cobertura/coverage.xml
 sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
 sonar.sourceEncoding=UTF-8
